# TestQRhi

./: CMakeLists.txt  Main.qml  README.md  main.cpp  rhiitem.cpp  rhiitem.h  simple.frag  simple.vert
